Fixed the stretching of images

--- a/style/style.css
+++ b/style/style.css
@@ -13,6 +13,7 @@ body {
 }
 
 .wbn-slide {
+  display:flex;
   position:absolute;
   min-height:inherit;
   width:100%;
@@ -23,8 +24,7 @@ body {
 .wbn-slide img {
   object-fit: cover;
   min-height:inherit;
-  max-width:100%;
-  max-height:100%;
+  width:100%;
   pointer-events: none;
 }
 
